--- a/client/src/components/presentational/Input/index.css
+++ b/client/src/components/presentational/Input/index.css
@@ -2,6 +2,12 @@
     margin: 0 0 20px 10px;
 }
 
+.inline-auth-input-container {
+    margin: 0 20px 20px 10px;
+    display: inline-block;
+    width: 40%;
+}
+
 .auth-label {
     display: block;
     font-size: 18px;
