--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -2,11 +2,13 @@
   min-height: 60px;
   background: #B8B8B8;
   /* text-align: center; */
+  /* margin-top: 500px; */
   
 }
 
-.footer span {
+/* .footer span {
   padding: 3px;
   background: #B8B8B8;
   min-height: 30px;
-}
+  /* margin-top: 500px; */
+
