--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -5,7 +5,9 @@
   /* margin-top: 500px; */
   
 }
-
+.footer span{
+ position:"relative";
+}
 /* .footer span {
   padding: 3px;
   background: #B8B8B8;
