--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   height: 100%;
 }
 
@@ -7,7 +7,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 @font-face {
     font-family: evently;
