restructuring login element to fit on welcome banner. still not great, but it works for now.

--- a/client/src/components/HomeJumbo/style.css
+++ b/client/src/components/HomeJumbo/style.css
@@ -1,5 +1,5 @@
 .landingJumbo {
-    height: 30vw;
+    height: 450px;
     background-image: url(./field.jpg);
     background-position: center;
     background-repeat: no-repeat;
