adding features page card group that advertises features

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
     background-size: cover;
     background-position: center;
     background-clip: content-box;
@@ -14,4 +14,4 @@
   .title{
     padding-top:15px;
     text-align: center;
-  }
+  } */
