--- a/client/src/components/SignUpForm/index.css
+++ b/client/src/components/SignUpForm/index.css
@@ -10,21 +10,18 @@
     overflow: scroll;
 }
 
+h4 {
+    margin-bottom: 5px;
+}
+
 .auth-header {
     font-size: 32px;
     font-weight: 600;
     margin: 10px 0 20px 10px;
 }
 
-h4 {
-    font-size: 24px;
-    font-weight: 500;
-    margin: 0px 0px 5px 10px;
-}
-
 .auth-section-divider {
-    margin: 0 0 20px 10px;
-    width: 90%;
+    margin: 0 0 20px 0;
 }
 
 .auth-checkbox {
@@ -44,4 +41,9 @@ h4 {
     font-size: 18px;
     color: rgba(12, 73, 153, 0.849);
     margin: 50px 0 0 10px;
+}
+
+.inline-input-container {
+    display: flex;
+    justify-content: space-evenly;
 }
