--- a/client/src/components/SignUpForm/index.css
+++ b/client/src/components/SignUpForm/index.css
@@ -45,3 +45,8 @@ h4 {
     color: rgba(12, 73, 153, 0.849);
     margin: 50px 0 0 10px;
 }
+
+.inline-input-container {
+    display: flex;
+    justify-content: space-between ;
+}
