--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -5,7 +5,7 @@
     border: 6px solid white;
     height: 400px;
     width: 400px;
-    
+    overflow: scroll;
     position: relative;
     margin: 0 auto;
     margin-top: 30px;
