--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -1,11 +1,11 @@
-/* .card {
+.card {
     background-size: cover;
     background-position: center;
     background-clip: content-box;
     border: 6px solid white;
     height: 400px;
     width: 400px;
-    
+    overflow: scroll;
     position: relative;
     margin: 0 auto;
     margin-top: 30px;
@@ -15,4 +15,4 @@
     padding-top:15px;
     margin-bottom: 30px;
     text-align: center;
-  } */
+  }
