adding some small styles to the payment form. also added the price and a message about payment inside the register modal.

--- a/client/src/components/SquareApp/style.css
+++ b/client/src/components/SquareApp/style.css
@@ -76,6 +76,8 @@
   
   #form-container {
     width: 100%;
+    border-style: solid;
+    border-radius: 15px;
   }
   
   /* Customize the Apple Pay on the Web button */
