added cards containing user's info and events with cancel registration buttons on each event

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -3,11 +3,12 @@
   background: #B8B8B8;
   /* text-align: center; */
   /* margin-top: 500px; */
+  /* position: relative; */
   
 }
-.footer span{
+/* .footer span{
  position:"relative";
-}
+} */
 /* .footer span {
   padding: 3px;
   background: #B8B8B8;
