--- a/client/src/components/Messaging/Message/index.css
+++ b/client/src/components/Messaging/Message/index.css
@@ -1,11 +1,12 @@
 .message-container {
     width: 100%;
-    padding: 5px 15px
+    padding: 5px 15px;
+    display: flex;
 }
 
 .photo-container {
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     border-radius: 4px;
 }
 
@@ -19,11 +20,16 @@
     margin-left: 10px;
 }
 
+.name-display-container {
+    margin-bottom: 5px;
+}
+
 .name-display {
     font-size: 18px;
     font-weight: 700;
     color: white;
     display: inline-block;
+    margin: 0px;
 }
 
 .time-sent-display {
@@ -31,6 +37,7 @@
     font-weight: 200;
     color: rgb(225, 225, 225);
     display: inline-block;
+    margin: 0 0 0 10px;
 }
 
 .text-display {
