--- a/client/src/components/Messaging/MessageContainer/index.css
+++ b/client/src/components/Messaging/MessageContainer/index.css
@@ -2,5 +2,7 @@
     width: 80%;
     height: 80%;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    padding: 10px;
+    overflow: scroll;
 }
