changing messaging structure

--- a/client/src/components/Messaging/ConversationHeader/index.css
+++ b/client/src/components/Messaging/ConversationHeader/index.css
@@ -3,5 +3,7 @@
     height: 80px;
     padding: 10px 20px;
     border-bottom: 1px solid rgb(33, 33, 33);
+    border-top: 1px solid rgb(33, 33, 33);
+
 }
 
