--- a/client/src/components/AccountEventCard/style.css
+++ b/client/src/components/AccountEventCard/style.css
@@ -1,4 +1,24 @@
-.accoutEventCard{
-    height: 300px;
-    overflow: scroll
+.accountEventCard{
+    height: 360px;  
+    width: 27.5%;
+    min-width: 300px;
+    overflow: scroll;
+    /* margin-right: 200px; */
 }
+@media only screen and (max-width: 768px) {
+    .accountEventCard {
+      margin: 30px;
+    }
+  }
+@media only screen and (max-width: 320px) {
+    .accountEventCard {
+      width: 20%;
+      min-width: 210px;
+      height: 300px;
+      /* margin: 0 auto; */
+      margin-right: 50px;
+      margin-left: 50px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+  }
