--- a/client/src/components/AccountInfoCard/style.css
+++ b/client/src/components/AccountInfoCard/style.css
@@ -1,4 +1,26 @@
 .accountInfoCard{
-    height: 300px;
+    height: 360px;
+    width: 27.5%;
     overflow: scroll;
+    min-width: 300px;
+    /* margin-right: 200px; */
 }
+@media only screen and (max-width: 768px) {
+    .accountInfoCard {
+      margin: 30px;
+    }
+  }
+
+
+  @media only screen and (max-width: 320px) {
+    .accountInfoCard {
+      width: 20%;
+      min-width: 210px;
+      height: 300px;
+      /* margin: 0 auto; */
+      margin-right: 50px;
+      margin-left: 50px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+  }
