--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -1,4 +1,4 @@
-.card {
+.eventlycard {
     background-size: cover;
     background-position: center;
     background-clip: content-box;
@@ -11,7 +11,7 @@
     margin-top: 30px;
     margin-bottom: 100px;
   }
-  .titles{
+  .eventlytitles{
     padding-top:15px;
     margin-bottom: 30px;
     text-align: center;
