--- a/client/src/components/BillsTable/style.css
+++ b/client/src/components/BillsTable/style.css
@@ -1,6 +1,15 @@
+.billsTable{
+    /* background-color: white; */
+    color: rgb(15, 15, 15);
+}
+
+
+
 @media only screen and (min-width: 426px) {
     .billsTable{
-        width: 80%;
-        margin: 40px;
+        width: 90%;
+        margin: 0 auto;
+        /* background-color: #d1d1d1; */
+        color: rgb(15, 15, 15);
     }
 }
