changing card color to lighter gray. color of center feature quote to same color as feature jumbo. adding us class to the ternary auth expression on navbar.

--- a/client/src/components/FeaturesCardGroup/style.css
+++ b/client/src/components/FeaturesCardGroup/style.css
@@ -3,5 +3,9 @@
 }
 
 .feature-card-bg {
-    background-color: #D1D1D1;
+    background-color: #e2e0e0;
+}
+
+.center-quote-card {
+    background-color: #AFD2E9;
 }
