--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
   min-height: 60px;
-  background: #B8B8B8;
+  background:rgb(225, 225, 225);
   /* text-align: center; */
   /* margin-top: 500px; */
   /* position: relative; */
