--- a/client/src/components/HomeJumbo/style.css
+++ b/client/src/components/HomeJumbo/style.css
@@ -1,6 +1,6 @@
 .landingJumbo {
-    height: 450px;
-    background-image: url(./field.jpg);
+    height: 550px;
+    background-image: url("./field.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
