--- a/client/src/components/Dropdown/style.css
+++ b/client/src/components/Dropdown/style.css
@@ -1,5 +1,3 @@
-.dropDownBar{
-    color: rgb(39, 130, 250) !important;
-    
-    
+#dropdown-basic {
+    background-color: #5bc0eb !important;
 }
