--- a/client/src/components/Funcard/style.css
+++ b/client/src/components/Funcard/style.css
@@ -1,6 +1,13 @@
-.title{
+.funCard{
     width: 300px;
     margin: 20px;
     height: 300px;
+    background-color: #d1d1d1;
     
+}
+
+.registerBtn{
+    background-color: #5BC0EB;
+  color: rgb(15, 15, 15);
+  border: rgb(15, 15, 15);
 }
