--- a/client/src/components/HomeJumbo/style.css
+++ b/client/src/components/HomeJumbo/style.css
@@ -1,7 +1,7 @@
 .landingJumbo {
-    height: 450px;
-    background-image: url(./field.jpg);
+    height: 100vh;
+    background-image: url(./Sports.png);
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
 }
