adding subtle bg for the events, programs, features jumbo and cal. changing logout/login buttons to be same color.

--- a/client/src/components/FeaturesJumbo/style.css
+++ b/client/src/components/FeaturesJumbo/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .feature-jumbo-bg {
-    background-color: #AFD2E9;
+    background-image: url(../HomeJumbo/Sports.png);
     text-justify: center;
 }
 
