--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -8,7 +8,7 @@ body {
     overflow: scroll;
     margin-top: 30px;
     margin-bottom: 100px;
-    background-color: #rgb(225, 225, 225);
+    background-color: rgb(225, 225, 225);
   }
 
   .dashTitles{
