--- a/client/src/components/Messaging/MessageForm/index.css
+++ b/client/src/components/Messaging/MessageForm/index.css
@@ -2,20 +2,23 @@
     border: 1px solid rgb(33, 33, 33);
     width: 100%;
     margin-bottom: 10px;
+    border-radius: 15px;
 }
 
 .message-form {
     padding: 10px;
     width: 100%;
-    border-radius: 10px;
 }
 
 .message-input {
     width: calc(100% - 30px);
-    margin-left: 30px;
     border: none;
     border-radius: 4px;
     background-color: inherit;
+}
+
+.message-input:focus {
+    outline: none;
 }
 
 .message-toolbar {
