--- a/client/src/pages/Messaging/index.css
+++ b/client/src/pages/Messaging/index.css
@@ -1,25 +1,37 @@
 .conversation-list {
     width: 100%;
     height: 100%;
-    background-color: rgba(33, 33, 33, 0.6);
+    background-color: white;
     border: 1px solid rgb(33, 33, 33);
-    color: white;
+    color: #666565
 }
 
 .conversation-header-and-modal-container {
     display: flex;
     align-items: center;
-    margin-top: 10px;
+    justify-content: space-between;
+    margin: 20px 0px 10px 0;
+    padding: 0 15px;
+}
+
+.conversation-header {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 2.5px;
 }
 
 .conversation-container {
-    color: white;
+    color: "#666565";
     width: 100%;
-    padding: 10px;
+    height: 25px;
+    margin-bottom: 5px;
+    padding: 0 0 0 20px;
+    display: flex;
+    align-items: center;
 }
 
 .conversation-container:hover {
-    background-color: rgba(225, 225, 225);
+    background-color: rgba(200, 200, 200, 0.4);
 }
 
 .conversation-title {
