--- a/client/src/pages/AdminDashboard/index.css
+++ b/client/src/pages/AdminDashboard/index.css
@@ -1,3 +1,9 @@
 .admin-dashboard-container {
     display: flex;
 }
+
+.home-dashboard {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
